# Projectory

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  TESTING.md  docker-compose.yml  next.config.mjs  optimization-summary.txt  package-lock.json  package.json  tailwind.config.mjs  tauri-dev.cmd  vitest.config.js  vitest.setup.js
.github/workflows/: ci.yml
.next/: react-loadable-manifest.json
.next/server/: _ssr_src_components_ProjectDetailView_jsx.js  middleware-react-loadable-manifest.js  server-reference-manifest.json  webpack-runtime.js
.opencode/tools/: deadliner.ts
data/: projects.json
e2e/: dashboard.spec.js
mcp-server/: index.mjs  package-lock.json  package.json
public/: manifest.json  sw.js
scripts/: deadliner-cli.mjs  projectory-cli.mjs  start.mjs  sync-version.mjs  tauri-build.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: Button.test.jsx  dateUtils.test.js  storage.test.js
src/app/: data.js  error.js  globals.css  layout.js  loading.js  not-found.js  page.js
src/components/: ActiveTodosSidebar.jsx  CardSkeleton.jsx  ConfirmModal.jsx  ContextMenu.jsx  DashboardHeader.jsx  DashboardSkeleton.jsx  EmptyPortfolio.jsx  ErrorBoundary.jsx  GlobalErrorBoundary.jsx  LeftSidebar.jsx  MobileNavBar.jsx  MobileNavDrawer.jsx  NewProjectButton.jsx  NewProjectCard.jsx  NewProjectModal.jsx  ProjectCard.jsx  ProjectDetailSkeleton.jsx  ProjectDetailView.jsx  RunningSessionBar.jsx  ScratchpadModal.jsx  SettingsPanel.jsx  (+6 more)
(+87 files in other folders)
