[package]
name = "projectory"
version = "0.11.1"
description = "Personal Project OS — multi-project manager with app launcher"
authors = ["Krocosr"]
edition = "2021"

[lib]
name = "projectory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 16
lto = "thin"
strip = true
